gamepage/gamepage.css
*,
*::before,
*::after {
    box-sizing: border-box;
}

:root {
    --ff-primary: 'Source Sans Pro', sans-serif;
    --ff-secondary: 'Source Sans Pro', monospace;

    --fw-reg: 300;
    --fw-bold: 900;

/*color background*/   
     --clr-light: #ffffff;
     --clr-dark: #303030;
     --clr-accent: #69579d;
     /*#8f6fec*/
     --clr-bg:#8e6fec4f;

     --fs-h1: 3rem;
     --fs-h2:2.25rem;
     --fs-h3:1.25rem;
     --fs-body:1rem;
}
/*--------------------------------------Styling ---------------------------------------*/

#puppy {
    overflow: hidden !important;
    max-width: 300px !important;
    opacity: 0;
}


body {
    background: var(--clr-light);
    color: var(--clr-dark);
    font-family: var(--ff-primary);
    font-size: var(--fs-body);
    line-height: 1.6;
    
}

strong {
    font-weight: var(--fw-bold);
}

img, i {
    display: block;
}

ul {
    list-style: none;
    font-weight: var(--fw-bold);
}

a {
    color:var(--clr-txt);
    text-decoration: none;
}

#puppy {
    max-width: 28rem;
}

h1, 
h2,
h3 {
    line-height: 1.1;
    margin: 0;
}

h1 {
    font-size: var(--fs-h1);
}

h2 {
    font-size: var(--fs-h2);
}

h3 {
    font-size: var(--fs-h3);
}

.subtitle {
    margin: 0;
    font-size: var(--fs-h3);
    color: var(--clr-txt);
}

.homeSectionSub , .meSub {
    background: var(--clr-accent);
    font-family: var(--ff-secondary);
    border-radius: 5px;
    font-family: 'Courier New', Courier, monospace;
    font-weight:bold;
}

.homeTitleIntro {
    font-weight: var(--fw-reg);
    color: var(--clr-dark);
    text-shadow: 4px 2px 1px #927bd8;   
    writing-mode: vertical-rl;
    text-orientation: upright;
    position: sticky;
    top: 0;
    margin-left: auto;
    margin-right: auto;
}

.homeTitleIntro strong {
    display: inline;
    font-size: 1em;
}

* {max-width: 100%;
min-height: max-content;
}

html {
    scroll-behavior: smooth;
}

.grid {
    display: inline-grid;
    grid-template-columns: 0 min-content min-content 0;
    grid-template-rows: max-content 5%;
    width: 100%;;
    margin: auto;
}

/*----------------------------------------intro section---------------------------------*/
.footer {
    grid-column:1/5;
    grid-row:2/3;
    width: 90%;
    margin: auto;
}

.home {
    grid-column:2/3 ;
    grid-row:1/2;
    height:auto;
    width:100%;
    background-color: var(--clr-bg);
    border-radius: 50px 0 0 50px;
    min-height: min-content;
}

.portfolio {
    grid-column:3/4 ;
    grid-row:1;
    width:90%;
    height: min-content;
    min-height: min-content;
}

.PortItemTitle {
text-align: center;
font-size: 3em;
max-width: 100%;
word-wrap: break-word;
}

.item {
    max-width: 80%;
    margin: auto;
    padding-top: 2em;
    padding-bottom: 2em;
}

.items {
    background-color: #927bd8;
    border-radius: 0 50px 50px 0;
    min-width: 80vw;
    min-height: min-content;
    height: max-content;
}

.portimg {
    max-width: 40%;
    margin: auto;
    padding: 1em;
}
/*----------------------------------------FOOter section---------------------------------*/
footer {
    display: flex;
    margin: auto;
    justify-content: space-between;
    width: 80vw;
    min-width: 5em;
    padding-top: 1em;
    padding-bottom: 1em;
}

.links {
    display: flex;
    margin: auto;
    justify-content: space-between;
    gap:2em
}

